--- a/package.json
+++ b/package.json
@@ -75,10 +75,11 @@
     "i18next-electron-language-detector": "0.0.10",
     "i18next-icu": "^1.1.2",
     "i18next-node-fs-backend": "^2.1.3",
-    "request": "^2.88.0",
     "ipfsd-ctl": "^0.42.3",
     "is-ipfs": "^0.6.1",
     "recursive-readdir": "^2.2.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "stream-to-pull-stream": "^1.7.3",
     "sudo-prompt": "^8.2.5",
     "which": "^1.3.1",
