--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -33,7 +33,7 @@ nsis:
 
 linux:
   artifactName: ${name}-${version}-${os}-${arch}.${ext}
-  executableName: ipse-desktop
+  executableName: ipfs-desktop
   category: Utility
   synopsis: A desktop client for IPSE
   maintainer: henrique@protocol.ai
