--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "ipse-desktop",
   "private": true,
-  "version": "0.9.1",
+  "version": "0.9.2",
   "productName": "IPSE Desktop",
   "description": "IPSE Native Application",
   "main": "out/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron -r @babel/register src/index.js",
+    "start": "cross-env NODE_ENV=development run-s build:babel start:electron",
+    "start:electron": "electron out/index.js",
     "lint": "standard",
-    "test": "cross-env NODE_ENV=test mocha",
+    "test": "cross-env NODE_ENV=test mocha test/unit/**/*.spec.js -r @babel/register",
+    "test:e2e": "xvfb-maybe cross-env NODE_ENV=test mocha test/e2e/**/*.e2e.js -r @babel/register --exit",
     "postinstall": "run-s install-app-deps build:webui",
     "install-app-deps": "electron-builder install-app-deps",
     "clean:webui": "shx rm -rf assets/webui/",
     "build": "run-s build:*",
     "build:webui": "run-s build:webui:*",
-    "build:webui:download": "npx ipfs-or-gateway -c QmQNHd1suZTktPRhP7DD4nKWG46ZRSxkwHocycHVrK3dYW -p assets/webui/",
+    "build:webui:download": "npx ipfs-or-gateway -c QmUtMmxgHnDvQq4bpH6Y9MaLN1hpfjJz5LZcq941BEqEXs -p assets/webui/ -t 360000 --verbose",
     "build:webui:minimize": "shx rm -rf assets/webui/static/js/*.map && shx rm -rf assets/webui/static/css/*.map",
-    "build:babel": "babel src --out-dir out --copy-files",
+    "build:babel": "babel src --out-dir out --copy-files --source-maps",
     "build:binaries": "electron-builder --publish onTag"
   },
-  "pre-commit": [
-    "lint"
-  ],
   "keywords": [
     "ipse",
     "ipfs",
@@ -49,7 +48,7 @@
     "cross-env": "^5.2.1",
     "delay": "^4.3.0",
     "dirty-chai": "^2.0.1",
-    "electron": "^6.0.7",
+    "electron": "^6.0.9",
     "electron-builder": "^21.2.0",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
@@ -58,7 +57,7 @@
     "shx": "^0.3.2",
     "sinon": "^7.4.2",
     "spectron": "^8.0.0",
-    "standard": "^14.1.0",
+    "standard": "^14.3.0",
     "tar": "^4.4.10",
     "tmp": "0.1.0",
     "xvfb-maybe": "^0.2.1"
@@ -66,20 +65,21 @@
   "dependencies": {
     "@babel/runtime": "^7.6.0",
     "auto-launch": "^5.0.5",
-    "electron-serve": "^0.3.0",
+    "countly-sdk-nodejs": "^19.8.0",
+    "electron-serve": "^0.4.0",
     "electron-store": "^5.0.0",
     "electron-updater": "^4.1.2",
     "fix-path": "^2.1.0",
     "fs-extra": "^8.1.0",
     "get-port": "^5.0.0",
     "go-ipfs-dep": "0.4.22",
-    "i18next": "^17.0.14",
+    "i18next": "^17.0.15",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-icu": "^1.1.2",
     "i18next-node-fs-backend": "^2.1.3",
-    "ipfsd-ctl": "^0.46.0",
+    "ipfsd-ctl": "^0.46.1",
     "is-ipfs": "^0.6.1",
-    "multiaddr": "^7.0.0",
+    "multiaddr": "^7.1.0",
     "multiaddr-to-uri": "^5.0.0",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.0",
